<resources>
    <string name="action_settings">Settings</string>

    <!-- Strings used on the main page -->
    <string name="main_applications_title">Registered applications</string>

    <string name="help"></string>
    <string name="foreground_notif_description">Notification to run in the foreground</string>
    <string name="sso_connection_button">Login with the Nextcloud File application</string>
    <string name="action_logout">Logout</string>
    <string name="logout_alert_title">Logout</string>
    <string name="logout_alert_content">Confirm to logout</string>
    <string name="ok">OK</string>
    <string name="discard">Discard</string>
    <string name="main_account_title">Account</string>
    <string name="main_account_desc">You are connected as: %s</string>
    <string name="action_restart">Restart Service</string>
    <string name="warning_notif_content">NextPush is disconnected</string>
    <string name="warning_notif_description">Warn when NextPush is disconnected or an issue occurred.</string>
    <string name="warning_notif_ticker">Warning</string>
    <string name="start_error_notif_content">The service could not be started correctly. Check the configuration of your server. You may be using a reverse proxy with buffering enabled.</string>
    <string name="low_keepalive_notif_content">The server app is configured with a low keepalive: %ss. It will drain your battery. We recommend using a higher keepalive.</string>
    <string name="no_ping_notif_content">NextPush was disconnected 5 times before receiving the ping. You probably have a problem with your server configuration. Your reverse proxy timeout is probably too low.</string>
    <string name="foreground_notif_ticker">Foreground</string>
    <string name="message_missing_nextcloud_app">Nextcloud Files is not installed on your device.\nPlease install it</string>
    <string name="uri_market_nextcloud_app">market://details?id=com.nextcloud.client</string>
    <string name="market_chooser_title">Market</string>
    <string name="install">Install</string>
    <string name="dismiss">Dismiss</string>
    <string name="uri_fdroid_nextcloud_app">https://f-droid.org/repository/browse/?fdid=com.nextcloud.client</string>
    <string name="nextcloud_files_not_found_title">Nextcloud Files not found</string>
    <string name="no_notification_dialog_title">Notifications refused</string>
    <string name="no_notification_dialog_message">You won\'t be notified when the application is disconnected.\nYou can enable notifications later in the settings.</string>
    <string name="manual_login">Manual login</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Application password</string>
    <string name="login_hint_nextcloud_root_url">Nextcloud root url</string>
    <string name="login_button_sign_in">Sign in</string>
    <string name="login_show_password_img_description">Show password</string>
    <string name="button_disable_optimisation">Disable optimization</string>
    <string name="card_disable_optimisation_description">To ensure the app functions properly, it is important to disable battery optimization. This will prevent the app from being put to sleep and causing delays in notifications.</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_unregistering_title">Unregistering</string>
    <string name="dialog_unregistering_content">Are you sure to unregister %d app(s)?</string>
    <string name="add_channel_dialog_content"><![CDATA[This creates an endpoint to which you can push to be notified on your phone. For example, it can be used to find out when a script fails. This is not related to UnifiedPush.<br><br>Long press on the channel to copy the endpoint<br><br><h3>Title:</h3>]]></string>
    <string name="local_notif_title">(Notif) %s</string>
    <string name="local_notif_description">Push to be notified. Not related to UnifiedPush: messages aren\'t forwarded to any other app.</string>
    <string name="copy_endpoint">Copy Endpoint</string>
</resources>
