<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.unifiedpush.distributor.nextpush.activities.MainActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_restart"
        android:orderInCategory="100"
        android:title="@string/action_restart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>