<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nextcloud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/material_grey_100"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sso_login"
            style="@style/NextcloudButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sso_connection_button"
            app:cornerRadius="24dp" />

        <TextView
            android:id="@+id/manual_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/manual_login"
            android:textColor="@color/material_grey_100" />

        <LinearLayout
            android:id="@+id/manual_login_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_username"
                    style="@style/TextInputEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_username"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    style="@style/TextInputEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/url_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_url"
                    style="@style/TextInputEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_nextcloud_root_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:theme="@style/TextInputEditTextLogin" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_manual_login"
                style="@style/NextcloudButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/login_button_sign_in"
                app:cornerRadius="24dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
